# rs_common

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/ryusei/common/: defs.hpp
test/: CMakeLists.txt
test/src/: type_test.cpp
